# mapf-virtual-structure

./: .gitignore  CMakeLists.txt  LICENSE  README.md  evaluation.sh  legacy.hpp  main.cpp
inc/: aco.hpp  aco_log.hpp  as.hpp  as_log.hpp  astar.hpp  astar_environment.hpp  common.hpp  common_aco.hpp  common_instance.hpp  edgemap.hpp  instance.hpp
src/: aco.cpp  aco_log.cpp  as.cpp  as_log.cpp  astar.cpp  astar_environment.cpp  common.cpp  common_aco.cpp  common_instance.cpp  edgemap.cpp  instance.cpp
test_files/inc/: global_pheromone_test.hpp  heuristic_policy_test.hpp  intensification_test.hpp
test_files/src/: global_pheromone_test.cpp  intensification_test.cpp
